--- a/package.json
+++ b/package.json
@@ -4,14 +4,17 @@
     "description": "",
     "main": "server.js",
     "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1"
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "heroku-postbuild": "npm install --production"
     },
     "author": "",
     "license": "ISC",
     "dependencies": {
         "dotenv": "^8.2.0",
         "express": "^4.17.1",
-        "pg": "^8.5.1"
+        "pg": "^8.5.1",
+        "pg-hstore": "^2.3.3",
+        "sequelize": "^6.6.2"
     },
     "engines": {
         "node": "12.18.2",
