--- a/config/config.json
+++ b/config/config.json
@@ -1,8 +1,8 @@
 {
     "development": {
-        "username": "root",
-        "password": null,
-        "database": "database_development",
+        "username": "postgres",
+        "password": " ",
+        "database": "ems",
         "host": "127.0.0.1",
         "dialect": "postgres"
     },
@@ -19,6 +19,12 @@
         "database": "database_production",
         "host": "127.0.0.1",
         "dialect": "postgres",
+        "dialectOptions": {
+            "ssl": {
+                "require": true,
+                "rejectUnauthorized": false
+            }
+        },
         "use_env_variable": "DATABASE_URL"
     }
 }
