--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "main": "server.js",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
-        "heroku-postbuild": "npm install --production"
+        "heroku-postbuild": "npm install --production",
+        "db:makemigrations": "./node_modules/sequelize-auto-migrations/bin/makemigration.js"
     },
     "author": "",
     "license": "ISC",
@@ -15,6 +16,7 @@
         "pg": "^8.5.1",
         "pg-hstore": "^2.3.3",
         "sequelize": "^6.6.2",
+        "sequelize-auto-migrations": "github:scimonster/sequelize-auto-migrations#a063aa6535a3f580623581bf866cef2d609531ba",
         "sequelize-cli": "^6.2.0"
     },
     "engines": {
